# ice-cream-dataops

./: README.md  cdf.toml  config.prod.yaml  config.test.yaml  pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: config.prod.yaml  config.test.yaml  private_project_sebastian_srikanth.md  private_project_sebastian_srikanth_env.md
ice-cream-dataops/modules/bootcamp/data_foundation/auth/: admin.readonly.group.yaml  data_developer.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: icapi_extractors.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/data_sets/: data_sets.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/extraction_pipelines/: ep_icapi_timeseries.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: functions.Function.yaml  schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/raw/: ice_cream_api.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml  create_asset_hierarchy.sql  create_asset_hierarchy.yaml  icapi_ts_assets_contextualization.schedule.yaml  icapi_ts_assets_contextualization.yaml
modules/bootcamp/ice_cream_api/data_sets/: data_sets.DataSet.yaml
modules/bootcamp/ice_cream_api/functions/: functions.Function.yaml  schedules.Schedule.yaml
modules/bootcamp/ice_cream_api/transformations/: contextualize_ts_assets.Transformation.yaml
modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
modules/bootcamp/use_cases/oee/data_sets/: data_sets.DataSet.yaml
(+9 files in other folders)
