[tool.poetry]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = ["Sebastian Srikanth Kumar <sebastian.selvaraj@cognite.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
cognite-toolkit = "0.5.31"
cognite-sdk = "^7.29.0"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
cognite-pygen = "^0.99.38"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
